feat: Implement integration tests for controllers